Fix overflow

--- a/website/styles/forms.css
+++ b/website/styles/forms.css
@@ -23,7 +23,6 @@
   opacity: 0;
   position: absolute;
   top: 0;
-  width: 200px;
   z-index: 10;
   cursor: pointer;
 }
